samples/_failures_safe/1761256045_e6fdfd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05ac66ec.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_05ac66ec.c:157:5: error: expected expression at end of input
  157 |     const char *type_names[] = {"NUMBER", "IDENTIFIER",
      |     ^~~~~
./samples/SAFE/__tmp_05ac66ec.c:157:5: error: expected declaration or statement at end of input
